ajouter un fichier style et un formulaire de contact

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
     <title>preformation Web </title>
 </head>
 
@@ -21,7 +21,7 @@
 
                 <nav class="col navbar navbar-expand-md navbar-dark">
 
-                    <a href="index.html" class="navbar-brand"> notre centre </a>
+                    <a href="index.html" class="navbar-brand"> LE CENTRE </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"> </span>
 
@@ -31,7 +31,7 @@
 
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html"> Accueil</a>
+                                <a class="nav-link" href="index.html"> accueil</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">nos formations </a>
@@ -86,7 +86,7 @@
             <div class="col-12 col-md-4">
                 <div class="card">
                     <img src="https://previews.123rf.com/images/bowie15/bowie151108/bowie15110800052/10416606-peinture-color%C3%A9e-sortant-de-l-%C3%A9cran-d-un-ordinateur-portable.jpg"
-                        class="card-img-top">
+                        width="200px" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title"> Web Designer</h5>
                         <p class="card-text"> la personne chargée de rendre un site attrayant </p>
@@ -96,11 +96,11 @@
             </div>
             <div class="col-12 col-md-4">
                 <div class="card">
-                    <h5 class="card-title"> JavaScript</h5>
-                    <img src="https://ih0.redbubble.net/image.558623892.3761/flat,550x550,075,f.u4.jpg" width="75%"
-                        class="card-img-top">
-                    <div class="card-body">
 
+                    <img src="https://addons-media.operacdn.com/media/CACHE/images/extensions/65/203065/1.2.4.1-rev2/images/a4dd27ddbece21cdce7ca53f79d74c2a/ae3e7480ba31e9d2028b801f12eb411e.jpg"
+                        width="50%" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title"> JavaScript</h5>
                         <p class="card-text">apprenez le Java Script en toute simplicité</p>
                         <a href="#" class="btn btn-primary">cliquez ici</a>
                     </div>
@@ -108,7 +108,39 @@
             </div>
         </div>
     </div>
+    <br> <br> <br> <br>
+    <div class="container">
+        <div class=" row h-100">
+            <div class="col-12 col-md-4 offset-md-4 my-auto">
+                <h2 style="color: blue;"> Formulaire de contact </h2>
 
+                <form>
+                    <div style="background-color: lightblue;">
+                        <div class="form-group">
+                            <label for="name "> Nom: </label>
+                            <input type="name" class="form-control" id="name" aria-describedby="name"
+                                placeholder="Entrez votre nom">
+                            <label for="prenom"> Prénom: </label>
+                            <input type="prenom" class="form-control" id="prenom" aria-describedby="prenom"
+                                placeholder="Entrez votre prénom">
+                            <label for="exampleInputEmail1"> Adresse mail: </label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Entrez votre email">
+
+                        </div>
+
+                        <label for="msg"> Laissez un message </label>
+                        <textarea id="message" class="form-control" rows="6"
+                            placeholder="Entrez votre message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">soumettre</button>
+
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <br> <br> <br> <br>
     <div class="bg-dark">
         <div class="container" pt-3 pb-2>
             <div class="row">
