--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="col-12 col-md-4">
                 <div class="card">
 
-                    <img src="https://addons-media.operacdn.com/media/CACHE/images/extensions/65/203065/1.2.4.1-rev2/images/a4dd27ddbece21cdce7ca53f79d74c2a/ae3e7480ba31e9d2028b801f12eb411e.jpg"
+                    <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2020/01/9a1ace88-a9c2-40f0-acf5-7f15367a4de0/870x489_luis_alvarez.webp"
                         width="50%" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title"> JavaScript</h5>
